# opensoegaki

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.web.ts
.claude/agents/: architect.md  implementer.md  reviewer.md
.github/workflows/: _build.yml  ci.yml  pages.yml  preview-build.yml  release.yml
backlog/: config.yml
backlog/tasks/: task-1 - Initial-git-commit-and-fix-repository-URL.md  task-10 - Save-as-PNG-via-native-file-dialog.md  task-11 - Multi-monitor-capture-support.md  task-12 - Test-infrastructure-for-TS-and-Rust-wired-into-CI.md  task-13 - Measure-and-optimize-capture-IPC-payload.md  task-14 - macOS-support-pass.md  task-15 - Release-pipeline-build-bundles-in-CI.md  task-16 - Ideas-.scrawl-format-SVG-export-blur-tool-custom-hotkeys.md  task-17 - Paste-image-from-clipboard-CtrlV.md  task-18 - Replace-global-capture-hotkeys-with-a-toolbar-capture-button.md  task-19 - Make-background-replacement-paste-capture-undoable.md  task-2 - Install-dependencies-and-get-a-clean-build-baseline.md  task-20 - Insert-arbitrary-images-as-annotation-objects.md  task-21 - Highlighter-tool-freehand-marker.md  (+45 more)
docs/: ARCHITECTURE.md  WEB.md
pwa/: index.html
scripts/: build-windows.sh  bump-version.mjs  dev-windows.sh
src/: app.ts  main-web.ts  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  lib.rs  main.rs  permission.rs
(+32 files in other folders)
