[package]
name = "openscrawl"
version = "0.1.0"
description = "Fast, lightweight, open-source screenshot annotation tool"
authors = ["OpenScrawl contributors"]
license = "MIT"
repository = "https://github.com/callas1900/openscrawl"
edition = "2021"

[lib]
name = "openscrawl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-drag = "2"
xcap = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
lto = true
codegen-units = 1
strip = true
