[package]
name = "opensoegaki"
version = "0.1.1"
description = "Fast, lightweight, open-source screenshot annotation tool"
authors = ["OpenSoegaki contributors"]
license = "MIT"
repository = "https://github.com/callas1900/opensoegaki"
edition = "2021"

[lib]
name = "opensoegaki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-drag = "2"
xcap = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
